:sparkles: search by name added
